@@ -1,11 +1,13 @@
 package com.digitalsingular.todo.item;
 
+import io.micrometer.core.instrument.util.StringUtils;
+
 public class TodoItem {
 
 	private String description;
 
 	public TodoItem(String description) throws IllegalArgumentException {
-		if (description.isBlank()) {
+		if (StringUtils.isBlank(description)) {
 			throw new IllegalArgumentException("No se puede crear un item sin descripcion");
 		}
 		this.description = description;
